# LCFC

./: README.md
lcfcbackend/: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  app.py  deploy.sh  docker-compose.yml  pyproject.toml  server.py
lcfcbackend/config/: database.py  env.py  get_db.py  get_redis.py  get_scheduler.py
lcfcbackend/docs/: Issue绠＄悊鍔熻兘璇存槑.md
lcfcbackend/exceptions/: exception.py  handle.py
lcfcbackend/middlewares/: gzip_middleware.py
lcfcbackend/module_admin/annotation/: log_annotation.py  pydantic_annotation.py
lcfcbackend/module_admin/controller/: cache_controller.py  captcha_controller.py  common_controller.py  config_controller.py  dept_controller.py  dict_controller.py  issue_controller.py  job_controller.py  log_controller.py  login_controller.py  menu_controller.py  notice_controller.py  online_controller.py  post_controler.py  role_controller.py  server_controller.py  user_controller.py
lcfcbackend/module_admin/dao/: config_dao.py  dept_dao.py  dict_dao.py  issue_dao.py  job_dao.py  job_log_dao.py  log_dao.py  login_dao.py  menu_dao.py  notice_dao.py  post_dao.py  role_dao.py  user_dao.py
lcfcbackend/module_admin/service/: cache_service.py  (+17 more)
lcfcbackend/module_task/: clean_temporary_attachments.py  scheduler_test.py
lcfcbackend/scripts/: parse_log2.py  parser_log1.py
lcfcbackend/sql/: issue_tables.sql  update_issue_attachment_table.sql
lcfcbackend/sub_applications/: staticfiles.py
lcfcbackend/tests/: conftest.py  test_issue_api.py
lcfcbackend/utils/: log_util.py  page_util.py  response_util.py
(+48 files in other folders)
