[project]
name = "lcfcbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "dotenv>=0.9.9",
    "fastapi[all]==0.115.0",
    "loguru==0.7.2",
    "openpyxl==3.1.5",
    "pandas==2.2.2",
    "passlib[bcrypt]==1.7.4",
    "pillow==10.4.0",
    "psutil==6.0.0",
    "pydantic-validation-decorator>=0.1.5",
    "pyjwt[crypto]==2.8.0",
    "pymysql==1.1.1",
    "redis>=6.4.0",
    "requests==2.32.3",
    "sqlalchemy>=2.0.43",
    "user-agents==2.2.0",
    "uvicorn>=0.35.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
